<resources>
    <string name="app_name">Dice Roll Counter</string>
    <string name="btn_roll">Roll!</string>
    <string name="show_data">Showing Data For:</string>
    <string name="die_label">Die:</string>
    <string name="character_label">Character:</string>
    <string name="roll_type_label">Roll Type:</string>
    <string name="settings">Settings</string>
    <string name="rolling">Rolling</string>
    <string name="for_character">for</string>
    <string name="rolled">Rolled a </string>
    <string name="on_a">on a </string>
    <string name="back">Back</string>
    <string name="i_would_like">I would like to:</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="a">A </string>
    <string name="submit">Submit</string>
    <string name="name">Name: </string>
    <string name="name_die">Name of New Die: </string>
    <string name="name_character">Name of New Character: </string>
    <string name="select">Select a die to delete: </string>
    <string name="select_character">Select a character to delete: </string>
    <string name="keep_data">Keep Associated Data</string>
    <string name="delete_data">Delete Associated Data</string>
    <string name="nat1_label">1: </string>
    <string name="nat2_label">2: </string>
    <string name="nat3_label">3: </string>
    <string name="nat4_label">4: </string>
    <string name="nat5_label">5: </string>
    <string name="nat6_label">6: </string>
    <string name="nat7_label">7: </string>
    <string name="nat8_label">8: </string>
    <string name="nat9_label">9: </string>
    <string name="nat10_label">10: </string>
    <string name="nat11_label">11: </string>
    <string name="nat12_label">12: </string>
    <string name="nat13_label">13: </string>
    <string name="nat14_label">14: </string>
    <string name="nat15_label">15: </string>
    <string name="nat16_label">16: </string>
    <string name="nat17_label">17: </string>
    <string name="nat18_label">18: </string>
    <string name="nat19_label">19: </string>
    <string name="nat20_label">20: </string>

    <string-array name="d20_sides">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string-array name="roll_type">
        <item>All</item>
        <item>Ability Check</item>
        <item>Attack Roll</item>
        <item>Death Saving Throw</item>
        <item>Saving Throw</item>
    </string-array>

    <string-array name="add_delete_list">
        <item>Character</item>
        <item>Die</item>
    </string-array>

</resources>
