<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/counterColor"
    tools:context=".CounterFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat1_label"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tvNat1"
        app:layout_constraintTop_toTopOf="parent"
        android:id='@+id/tvNat1Label'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat1Label"
        app:layout_constraintRight_toLeftOf="@id/tvNat2Label"
        app:layout_constraintTop_toTopOf="parent"
        android:id='@+id/tvNat1'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat2_label"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat1"
        app:layout_constraintRight_toLeftOf="@id/tvNat2"
        app:layout_constraintTop_toTopOf="parent"
        android:id='@+id/tvNat2Label'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@+id/tvNat2Label"
        app:layout_constraintRight_toLeftOf="@id/tvNat3Label"
        app:layout_constraintTop_toTopOf="parent"
        android:id='@+id/tvNat2'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat3_label"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat2"
        app:layout_constraintRight_toLeftOf="@id/tvNat3"
        app:layout_constraintTop_toTopOf="parent"
        android:id='@+id/tvNat3Label'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@+id/tvNat3Label"
        app:layout_constraintRight_toLeftOf="@id/tvNat4Label"
        app:layout_constraintTop_toTopOf="parent"
        android:id='@+id/tvNat3'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat4_label"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat3"
        app:layout_constraintRight_toLeftOf="@id/tvNat4"
        app:layout_constraintTop_toTopOf="parent"
        android:id='@+id/tvNat4Label'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@+id/tvNat4Label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id='@+id/tvNat4'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat5_label"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tvNat5"
        app:layout_constraintTop_toBottomOf="@id/tvNat1Label"
        android:id='@+id/tvNat5Label'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat5Label"
        app:layout_constraintRight_toLeftOf="@id/tvNat6Label"
        app:layout_constraintTop_toBottomOf="@id/tvNat1"
        android:id='@+id/tvNat5'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat6_label"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat5"
        app:layout_constraintRight_toLeftOf="@id/tvNat6"
        app:layout_constraintTop_toBottomOf="@id/tvNat1Label"
        android:id='@+id/tvNat6Label'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat6Label"
        app:layout_constraintRight_toLeftOf="@id/tvNat7Label"
        app:layout_constraintTop_toBottomOf="@id/tvNat2"
        android:id='@+id/tvNat6'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat7_label"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat6"
        app:layout_constraintRight_toLeftOf="@id/tvNat7"
        app:layout_constraintTop_toBottomOf="@id/tvNat1Label"
        android:id='@+id/tvNat7Label'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat7Label"
        app:layout_constraintRight_toLeftOf="@id/tvNat8Label"
        app:layout_constraintTop_toBottomOf="@id/tvNat3"
        android:id='@+id/tvNat7'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat8_label"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat7"
        app:layout_constraintRight_toLeftOf="@id/tvNat8"
        app:layout_constraintTop_toBottomOf="@id/tvNat1Label"
        android:id='@+id/tvNat8Label'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat8Label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNat4"
        android:id='@+id/tvNat8'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat9_label"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tvNat9"
        app:layout_constraintTop_toBottomOf="@id/tvNat5Label"
        android:id='@+id/tvNat9Label'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat9Label"
        app:layout_constraintTop_toBottomOf="@id/tvNat5"
        app:layout_constraintRight_toLeftOf="@id/tvNat10Label"
        android:id='@+id/tvNat9'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat10_label"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat9"
        app:layout_constraintRight_toLeftOf="@id/tvNat10"
        app:layout_constraintTop_toBottomOf="@id/tvNat5Label"
        android:id='@+id/tvNat10Label'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat10Label"
        app:layout_constraintRight_toLeftOf="@id/tvNat11Label"
        app:layout_constraintTop_toBottomOf="@id/tvNat6"
        android:id='@+id/tvNat10'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat11_label"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat10"
        app:layout_constraintRight_toLeftOf="@id/tvNat11"
        app:layout_constraintTop_toBottomOf="@id/tvNat5Label"
        android:id='@+id/tvNat11Label'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat11Label"
        app:layout_constraintRight_toLeftOf="@id/tvNat12Label"
        app:layout_constraintTop_toBottomOf="@id/tvNat7"
        android:id='@+id/tvNat11'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat12_label"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat11"
        app:layout_constraintRight_toLeftOf="@id/tvNat12"
        app:layout_constraintTop_toBottomOf="@id/tvNat5Label"
        android:id='@+id/tvNat12Label'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat12Label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNat8"
        android:id='@+id/tvNat12'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat13_label"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tvNat13"
        app:layout_constraintTop_toBottomOf="@id/tvNat9Label"
        android:id='@+id/tvNat13Label'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat13Label"
        app:layout_constraintRight_toLeftOf="@id/tvNat14Label"
        app:layout_constraintTop_toBottomOf="@id/tvNat9"
        android:id='@+id/tvNat13'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat14_label"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat13"
        app:layout_constraintRight_toLeftOf="@id/tvNat14"
        app:layout_constraintTop_toBottomOf="@id/tvNat9Label"
        android:id='@+id/tvNat14Label'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat14Label"
        app:layout_constraintRight_toLeftOf="@id/tvNat15Label"
        app:layout_constraintTop_toBottomOf="@id/tvNat10"
        android:id='@+id/tvNat14'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat15_label"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat14"
        app:layout_constraintRight_toLeftOf="@id/tvNat15"
        app:layout_constraintTop_toBottomOf="@id/tvNat9Label"
        android:id='@+id/tvNat15Label'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat15Label"
        app:layout_constraintRight_toLeftOf="@id/tvNat16Label"
        app:layout_constraintTop_toBottomOf="@id/tvNat11"
        android:id='@+id/tvNat15'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat16_label"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat15"
        app:layout_constraintRight_toLeftOf="@id/tvNat16"
        app:layout_constraintTop_toBottomOf="@id/tvNat9Label"
        android:id='@+id/tvNat16Label'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat16Label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNat12"
        android:id='@+id/tvNat16'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat17_label"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tvNat17"
        app:layout_constraintTop_toBottomOf="@id/tvNat13Label"
        android:id='@+id/tvNat17Label'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat17Label"
        app:layout_constraintRight_toLeftOf="@id/tvNat18Label"
        app:layout_constraintTop_toBottomOf="@id/tvNat13"
        android:id='@+id/tvNat17'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat18_label"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat17"
        app:layout_constraintRight_toLeftOf="@id/tvNat18"
        app:layout_constraintTop_toBottomOf="@id/tvNat13Label"
        android:id='@+id/tvNat18Label'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat18Label"
        app:layout_constraintRight_toLeftOf="@id/tvNat19Label"
        app:layout_constraintTop_toBottomOf="@id/tvNat14"
        android:id='@+id/tvNat18'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat19_label"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat18"
        app:layout_constraintRight_toLeftOf="@id/tvNat19"
        app:layout_constraintTop_toBottomOf="@id/tvNat13Label"
        android:id='@+id/tvNat19Label'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat19Label"
        app:layout_constraintRight_toLeftOf="@id/tvNat20Label"
        app:layout_constraintTop_toBottomOf="@id/tvNat15"
        android:id='@+id/tvNat19'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nat20_label"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat19"
        app:layout_constraintRight_toLeftOf="@id/tvNat20"
        app:layout_constraintTop_toBottomOf="@id/tvNat13Label"
        android:id='@+id/tvNat20Label'/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textColor="@color/fontColor"
        app:layout_constraintLeft_toRightOf="@id/tvNat20Label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNat16"
        android:id='@+id/tvNat20'/>

</android.support.constraint.ConstraintLayout>